--- a/WebContent/style/style.css
+++ b/WebContent/style/style.css
@@ -66,6 +66,10 @@
 	margin-right: 7px;
 }
 
+.bmir-style .option {
+	display: inline-block;
+}
+
 .bmir-style p {
     display: block;
     font: 13px Arial, Helvetica, sans-serif;
