--- a/WebContent/style/style.css
+++ b/WebContent/style/style.css
@@ -11,6 +11,14 @@
     -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.13);
 }
 
+.bmir-style .question-holder {
+	padding: 1px;
+    background: #F8F8F8;
+    border-radius: 6px;
+    margin-bottom: 5px;
+    padding-left: 15px;
+}
+
 .bmir-style .inner-wrap {
     padding: 10px;
     background: #F8F8F8;
@@ -19,13 +27,27 @@
     padding-bottom: 15px;
 }
 
-.bmir-style .question-holder {
-	padding: 1px;
-    background: #F8F8F8;
-    border-radius: 6px;
-    margin-bottom: 5px;
-    padding-left: 15px;
-	padding-bottom: 6px;
+.bmir-style .table-container {
+	margin-top: -5px;
+	margin-left: -5px;
+	margin-right: -5px;
+}
+
+.bmir-style .table {
+	display: table;
+	table-layout: fixed;
+	width: 100%;
+	box-sizing: border-box;
+    border-collapse: separate;
+    border-spacing: 5px;
+}
+
+.bmir-style .table-row {
+	display: table-row;
+}
+
+.bmir-style .table-row > div {
+	display: table-cell;
 }
 
 .bmir-style h1 {
