--- a/WebContent/style/style.css
+++ b/WebContent/style/style.css
@@ -156,8 +156,7 @@
 	font-size: 15px;
 }
 
-.bmir-style input[type="button"]:hover, .bmir-style input[type="submit"]:hover
-	{
+.bmir-style input[type="button"]:hover, .bmir-style input[type="submit"]:hover {
 	background: #2A6881;
 	-moz-box-shadow: inset 0px 2px 2px 0px rgba(255, 255, 255, 0.28);
 	-webkit-box-shadow: inset 0px 2px 2px 0px rgba(255, 255, 255, 0.28);
